--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,3 +29,8 @@
     padding: 10px;
     border-radius: 10px;
 }
+.task-list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
