--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,3 +114,17 @@
 }
 
 <h1 [style.color]="dynamicColor" [style.fontSize]="dynamicFont">Dynamic styling</h1>
+
+<h1>Basic routing</h1>
+<ul>
+  <li>
+    <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/">Home</a>
+  </li>
+  <li>
+    <a routerLinkActive="active" routerLink="login">Login</a>
+  </li>
+  <li>
+    <a routerLinkActive="active" routerLink="about">About</a>
+  </li>
+</ul>
+<router-outlet></router-outlet>
