--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<h1>User list</h1>
+<h1>User list-home component</h1>
 @for (user of users; track user.id) {
     <li><a routerLink="user/{{user.id}}/{{user.name}}">{{user.name}}</a></li>
 }
+<a [routerLink]="['profile', {name:'Swe'}]">Go to profile page-router link</a>
+<button (click)="goToProfile()">Go to profile page- button click</button>
+<a routerLink='profile'>Go to profile page-router</a>
