--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Angular 19 tutorial</h1>
+<h1><a routerLinkActive="active" routerLink="form">Forms</a></h1>
 <h1>Counter App</h1>
 <div style="text-align: center;">
   <h3 class="count">{{count}}</h3>
