--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -17,3 +17,22 @@
     <button>Submit</button>
 </form>
 
+<h1>Template driven forms</h1>
+<form #userForm="ngForm" (ngSubmit)="addUser(userForm.value)">
+    <input type="text" placeholder="Enter name" name = "name" ngModel required #name="ngModel">
+    <span class="error" *ngIf="name.invalid && name.touched">*required</span>
+    <br>
+    <input type="password" placeholder="Enter password" name = "password" ngModel required minlength="8" maxlength="20" #password="ngModel">
+    <span class="error" *ngIf="name.invalid && name.touched">*required</span>
+    <br>
+    <select name="gender" id="gender" ngModel required #gender="ngModel"> 
+        <option value="">Select Gender</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+    </select>
+    <span class="error" *ngIf="gender.invalid && gender.touched">*required</span>
+    <br>
+    <input type="range" name = "range" ngModel>
+    <br>
+    <button [disabled]="userForm.invalid">Submit</button>
+</form>
