--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<h2>Login component</h2>
+<button (click)="getData.emit(data)">Pass data 1</button>
+<button (click)="passData()">Pass data 2</button>
