--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -160,3 +160,4 @@
 <p>USD to INR {{amount | currencyConvertor}}</p>
 <p>YUAN to INR {{amount | currencyConvertor:12}}</p>
 <p>EUR to INR {{amount | currencyConvertor:98}}</p>
+<h1>Life cycle hooks</h1>
