--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,8 @@
   <app-user [user]="user"></app-user>
 </div>
 }
+<h1>Lazy loading</h1>
+<a routerLink="admin">Go to admin</a>
 <h1>Counter App</h1>
 <div style="text-align: center;">
   <h3 class="count">{{count}}</h3>
